--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,9 +11,9 @@ menu:
 # Projects Section
 
 projects:
-- {name: 'Project One',   url: 'proj-1'}
-- {name: 'Project Two',   url: 'proj-2'}
-- {name: 'Project Three', url: 'proj-3'}
+- {name: 'AI Dance Feedback',   url: 'proj-1'}
+- {name: 'Pose Estimation Experiments',   url: 'proj-2'}
+- {name: 'UX Prototype', url: 'proj-3'}
 - {name: 'Project Four',  url: 'proj-4'}
 - {name: 'Project Five',  url: 'proj-5'}
 
