Update project 1: AI Dance Feedback App

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ projects:
 # Contact Section
 
 social:
-- {icon: 'twitter',   link: 'https://twitter.com/paululele'}
+- {icon: 'YouTube',   link: 'https://www.youtube.com/@2labchois'}
 - {icon: 'instagram', link: 'https://instagram.com/paululele'}
 - {icon: 'github',    link: 'https://github.com/lenpaul'}
 - {icon: 'linkedin',  link: 'https://linkedin.com/in/lenpaul'}
