--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,9 +21,9 @@ projects:
 # Contact Section
 
 social:
-- {icon: 'YouTube',   link: 'https://www.youtube.com/@2labchois'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'github',    link: 'https://github.com/lenpaul'}
+- {icon: 'youtube',   link: 'https://www.youtube.com/@2labchois'}
+- {icon: 'instagram', link: 'https://instagram.com/2labchois_dance'}
+- {icon: 'github',    link: 'https://github.com/heeddobbak'}
 - {icon: 'linkedin',  link: 'https://linkedin.com/in/lenpaul'}
 - {icon: 'envelope',  link: 'mailto:mailto:l.nguyen.paul@gmail.com'}
 
